Small styling fixes

--- a/public/index.html
+++ b/public/index.html
@@ -30,7 +30,7 @@
     <title>WSO Records Explorer</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Explore local records and standard, for current and past weight classes.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
